# nba_stats

./: .env.example  .gitignore  .npmrc  .pre-commit-config.yaml  AI_AGENT_CHECKLIST_INTEGRATION.md  AI_AGENT_PROMPT_TEMPLATE.md  CHECKLIST_INTEGRATION_COMPLETE.md  CHECKLIST_SETUP_COMPLETE.md  CODING_STANDARDS.md  DATABASE_MANAGEMENT.md  DEVELOPER_SETUP.md  ERROR_HANDLING_DOCS.md  ERROR_HANDLING_GUIDE.md  IMPROVEMENT_CHECKLIST.md  NBA_STATS_TRANSFORMATION_COMPLETE.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_COMPLETION_VALIDATION.md  PROJECT_ANALYSIS_REPORT.md  QUICK_AI_PROMPTS.md  README.md  SECURITY.md  UX_Analysis_and_Improvement_Plan.md  ai_checklist.py  checklist_workflow.sh  deploy.sh  dev.sh  dev_with_correct_db.sh  docker-compose.yml  generate_ai_prompt.py  nba-stats.code-workspace  package-lock.json  package.json  rebuild.sh  rebuild_docker.sh  server.js  start.js  test_checklist_integration.py  test_err_001_error_handling.py  test_prod_001_validation.py  test_search_functionality.js  (+1 more)
Application/backend/: .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  FREE_AGENT_FIX_SUMMARY.md  README.md  REFACTORING.md  alembic.ini  bandit_report.json  check_games.py  cleanup_databases.sh  demo_fix_working.py  emergency_column_fix.sh  fix_database_schema.sh  fix_free_agents.py  fix_missing_column.sh  fix_timestamp_columns.sh  investigate_game_0042400306.py  investigate_specific_games.py  nba_stats.db.bak  pyproject.toml  pytest.ini  recreate_database.sh  requirements.txt  run_free_agent_fix.py  setup.cfg  setup.py  simple_test.py  test_database_connection.sh  (+15 more)
(+174 files in other folders)
